--- a/wiki/OpenEVSEv2partslist.wiki
+++ b/wiki/OpenEVSEv2partslist.wiki
@@ -53,6 +53,8 @@
 
 This file is for those who want to source their own PCB and components to build their own OpenEVSE circuit board. This contains most of the features of the pre-built OpenEVSE board.
 
+Prices subject to change and does not include taxes or shipping.
+
     * *v2.0* - Added connections for logic level L1/L2 voltage sense board inputs and power. *Changed* DC-DC converter to _Murata NKA1212SC_ with 12Vdc input. Added option for second relay. Added a header for connecting to an Adafruit color LCD shield.
 
     * *v1.1* - Added MicroPower Direct D107E DC/DC converter.
