--- a/wiki/J1772Basics.wiki
+++ b/wiki/J1772Basics.wiki
@@ -13,13 +13,13 @@ Basics of the J1772 standard.
 = Pilot =
 The J1772 Pilot is a 1khz +12V to -12V square wave, the voltage defines the state and the duty cycle defines the current available to the EV. The EVSE sets the duty cycle and the EV adds resistance from the pilot the Ground to vary the voltage. The EVSE reads the voltage and changes state accordingly. 
 
-|| State || Pilot Voltage || EV Resistance || Description || 
-|| State A || 12 || N/A || Not Connected || 
-|| State B || 9 || 2.74k || Connected || 
-|| State C || 6 || 882 || Charging || 
-|| State D || 3 || 246 || Ventilation Required || 
-|| State E || 0 || N/A || No power ||
-|| State F || -12 || N/A || EVSE Error ||
+|| State || Pilot Voltage High || Pilot Voltage Low || EV Resistance || Description || PWM ||
+|| State A || +12v || N/A || N/A || Not Connected || DC ||
+|| State B || +9v || -12v || 2.74k || Connected || 1000 Hz ||
+|| State C || +6v || -12v || 882 || Charging || 1000 Hz ||
+|| State D || +3v || -12v || 246 || Ventilation Required || 1000 Hz ||
+|| State E || 0 || 0 || N/A || No power || 1000 Hz ||
+|| State F || N/A || -12v || N/A || EVSE Error || DC ||
 
 = Max Current =
 Up to 51A
