--- a/wiki/J1772Basics.wiki
+++ b/wiki/J1772Basics.wiki
@@ -18,7 +18,7 @@ The J1772 Pilot is a 1khz +12V to -12V square wave, the voltage defines the stat
 || State B || +9v || -12v || 2.74k || Connected || 1000 Hz ||
 || State C || +6v || -12v || 882 || Charging || 1000 Hz ||
 || State D || +3v || -12v || 246 || Ventilation Required || 1000 Hz ||
-|| State E || 0 || 0 || N/A || No power || 1000 Hz ||
+|| State E || 0 || 0 || N/A || No power || N/A ||
 || State F || N/A || -12v || N/A || EVSE Error || DC ||
 
 = Max Current =
