--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -11,6 +11,7 @@ OpenEVSE has been tested with:
 || 2011 - 2012 || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
 || 2012 || Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
 || 2012 || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
+|| 2012 || Ford || Focus || || 6.6kw - 30A @ 240V || None ||
 
 
 If you have tested OpenEVSE on other vehicles please send a compatibility report to chris1howell83@gmail.com...
