--- a/wiki/EVSE_by_mwolrich.wiki
+++ b/wiki/EVSE_by_mwolrich.wiki
@@ -34,7 +34,7 @@ If using the L6-30 30A cable/outlet/breaker set the EVSE board to a maximum of 2
 || PANEL INTERNAL 4.9" X 4.9" (377-1939-ND) || Digikey || $4.80 || 1 || http://search.digikey.com/scripts/DkSearch/dksus.dll?WT.z_header=search_go&lang=en&site=us&keywords=377-1939-ND&x=0&y=0 ||
 || FUSEHOLDER 1/4" 30A 250V PNL MNT (283-2850-ND) || Digikey || $4.00 || 2 || http://search.digikey.com/us/en/products/BK%2FHKP-R/283-2850-ND/1024094 ||
 || FUSE 250V SLO-BLO 3AB 30A (F1779-ND) || Digikey || $1.74 || 2|| http://search.digikey.com/us/en/products/0326030.MXP/F1779-ND/778640 ||
-|| J-1772 cable, 30 amps (A3435-PEV)  || Leviton || $126.00 || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
+|| J-1772 cable, 30 amps (A3435-PEV)  ([http://code.google.com/p/open-evse/wiki/J1772CableSources other options]) || Leviton || $126.00 || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || 30A AC Plug L6-30 || Stay Online || $33.00 || 1 || http://www.stayonline.com/detail.aspx?ID=15695 ||
 || AdaFruit RGB LCD Shield kit || AdaFruit || $24.95 || 1 || http://adafruit.com/products/714 ||
 || Strain Relief 3/4" NPT (Arrow Hart TC1254) || local electrical supply house || $15.00 || 1 ||
