Edited wiki page LoadingFirmware through web user interface.

--- a/wiki/LoadingFirmware.wiki
+++ b/wiki/LoadingFirmware.wiki
@@ -2,8 +2,10 @@
 
 = Introduction =
 
-Loading firmware to the Open-EVSE requires an ISP. There are many AVR compatible programmers available. The USBtinyISP Kit from Adafruit is a good choice, it is inexpensive and open. http://www.ladyada.net/make/usbtinyisp/
-<img src="http://farm2.static.flickr.com/1388/531946274_b6aec192ba.jpg">
+Loading firmware to the Open-EVSE requires an ISP. There are many AVR compatible programmers available. The USBtinyISP Kit from Adafruit is a good choice, it is inexpensive and open. http://www.ladyada.net/make/usbtinyisp/  You can buy it from Adafruit:
+http://www.adafruit.com/products/46
+
+<img src="http://farm2.static.flickr.com/1388/531946274_b6aec192ba.jpg" />
 
 = Software =
 You will also need software compatible with your ISP such as Avrdude or the Arduino IDE. 
