Edited wiki page OpenEVSE_boards through web user interface.

--- a/wiki/OpenEVSE_boards.wiki
+++ b/wiki/OpenEVSE_boards.wiki
@@ -16,6 +16,4 @@
 || Suited for || Most EVSEs || Hardware/Software Development || Hardcore DIYers ||
 || Price || $80 || $45 plus Arduino Uno (~$30) || Board $10 + components $35 ||
 
-
-
- 
+How to use the OpenEVSE board to make a basic EVSE see [ExampleEVSE].
