--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -14,6 +14,7 @@
     * [J1772Basics Basics of J1772]
     * [J1772CableSources Sources for J1772 cables]
   * *How to...*
+    * [ExampleEVSE Build a basic EVSE]
     * [LoadingFirmware Load Firmware]
     * [AdaFruitRGBdisplay Add a display]
     * [MaxCurrent Set Default Current]
