Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -21,7 +21,7 @@
   * *Do it Yourself*
     * [OpenEVSEv1partslist Parts list to DIY V1]
     * [OpenEVSEv2partslist Parts list for DIY V2]
-    * [PCBProduction Have PCB fabricated for you DIY project]
+    * [PCBProduction Have PCB fabricated for you]
   * *Testing*
     * [EVSE_TESTING Testing your EVSE]
   * *Ordering*
