Edited wiki page Ordering through web user interface.

--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -22,4 +22,4 @@ Prices $USD
 
 = Ordering =
 
-Online Ordering will be avaliable when the waiting list backlog has been eliminated and parts are in stock. To get on the waiting list please send an E-mail to chris1howell83@gmail.com
+Online Ordering will be avaliable when the waiting list backlog has been eliminated and parts are in stock. 
