--- a/wiki/OpenEVSEv4partslist.wiki
+++ b/wiki/OpenEVSEv4partslist.wiki
@@ -3,7 +3,7 @@
 = Open EVSE V4 parts list =
 
 || *Mfg.* || *Part Number* || *Type* || *Value* || *Name* || *Qty* || *Price* || *URL* || 
-|| Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu || IC1|| 1|| $2.50|| http://www.mouser.com/ProductDetail/Atmel/ATMEGA328P-PU/?qs=K8BHR703ZXguOQv3sKbWcg%3d%3d || 
+|| Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu || IC1|| 1|| $2.50|| http://www.digikey.com/scripts/DkSearch/dksus.dll?vendor=0&keywords=ATMEGA328P-PU-ND || 
 || Analog Devices || ADG419BNZ || HS-Switch || SPDT || IC2|| 1|| $3.15|| http://www.digikey.com/product-detail/en/ADG419BNZ/ADG419BNZ-ND/820067 || 
 || Fairchild Semi || LN358N || Opamp || LN358 || IC4|| 1|| $0.46|| http://search.digikey.com/us/en/products/LM358N/LM358NFS-ND/458692 || 
 || Fairchild Semi || MID400|| Optocoupler|| 8-dip|| IC5,IC6|| 2|| $4.06|| http://www.digikey.com/product-detail/en/MID400 || 
@@ -18,22 +18,22 @@
 || Recom|| RBM-1212D|| DC-DC||  12v input|| +/-12v42ma DC1|| 1|| $8.48|| http://www.digikey.com/product-detail/en/RBM-1212D || 
 || Bourns Inc.|| 8230-72-RC|| Inductor|| 150uh|| L1,L2|| 2|| $2.21|| http://www.digikey.com/product-detail/en/8230-72-RC || 
 || Wurth Electronics|| 7447452221|| Inductor|| 220uh 1.2A|| L3|| 1|| $1.47|| http://www.digikey.com/product-detail/en/7447452221 || 
-|| Any || Any || Resistor || 100|| R18|| 1|| $0.09 || 
-|| Any || Any || Resistor || 110|| R24|| 1|| $0.09 || 
-|| Any || Any || Resistor || 320|| R2|| 1|| $0.09 || 
-|| Any || Any || Resistor || 330|| R11,R17,R23|| 3|| $0.09 || 
-|| Vishay Dale (Any)|| CMF501K0000FHEB|| Resistor || 1K 1% || R1|| 1|| $0.31|| http://www.digikey.com/product-detail/en/CMF501K0000FHEB || 
-|| Any || Any || Resistor || 1k || R20|| 1|| $0.09 || 
-|| Any || Any || Resistor || 1.2k || R9|| 1|| $0.09 || 
-|| Any || Any || Resistor || 2.8k|| R3,R4|| 2|| $0.09|| 
-|| Any || Any || Resistor || 10k || R10,19,25,27,28,30|| 6|| $0.09 || 
-|| Any || Any || Resistor || 20k || R15|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 100|| R18|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 110|| R24|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 320|| R2|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 330|| R11,R17,R23|| 3|| $0.09 || 
+|| Vishay Dale (Any)|| CMF501K0000FHEB|| Resistor 1%|| 1K 1% || R1|| 1|| $0.31|| http://www.digikey.com/product-detail/en/CMF501K0000FHEB || 
+|| Any || Any || Resistor 5%|| 1k || R20|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 1.2k || R9|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 2.8k|| R3,R4|| 2|| $0.09|| 
+|| Any || Any || Resistor 5%|| 10k || R10,19,25,27,28,30|| 6|| $0.09 || 
+|| Any || Any || Resistor 5%|| 20k || R15|| 1|| $0.09 || 
 || Vishay Dale|| RN60D2202FB14|| Resistor HV|| 22k 300v|| R12,R13|| 2|| $0.18|| http://www.alliedelec.com/search/productdetail.aspx?SKU=70200582 || 
-|| Any || Any || Resistor || 56k || R5|| 1|| $0.09 || 
-|| Any || Any || Resistor || 100k || R6,14,16|| 3|| $0.09 || 
-|| Any || Any || Resistor || 200k || R7|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 56k || R5|| 1|| $0.09 || 
+|| Any || Any || Resistor 5%|| 100k || R6,14,16|| 3|| $0.09 || 
+|| Any || Any || Resistor 5%|| 200k || R7|| 1|| $0.09 || 
 || Vishay BC|| HVR2500002743FR500|| Resistor|| 274k|| R22|| 1|| $0.53|| http://www.digikey.com/product-detail/en/HVR2500002743FR500 || 
-|| Vishay BC|| HVR2500001004FR500|| Resistor|| 1.0M|| R21|| 1|| $0.53 || 
+|| Vishay BC|| HVR2500001004FR500|| Resistor|| 1.0M|| R21|| 1|| $0.53 || http://www.digikey.com/product-detail/en/HVR2500001004FR500/PPCQF1.0MCT-ND/719864 ||
 || Any || Any || Cap (ceramic) || 0.1uf || C3,4,10-13,15,20,21|| 9|| $0.30|| http://search.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=+399-4266-ND || 
 || Any || Any || Cap (ceramic) || 18pf || C1,C2|| 2|| $0.30|| http://www.digikey.com/product-detail/en/SR151A180JAR || 
 || TDK Corp.|| FK18X5R1E334K|| Cap (ceramic) || 0.33uf low esr|| C6,C7|| 2|| $0.49|| http://www.digikey.com/product-detail/en/FK18X5R1E334K || 
@@ -43,11 +43,13 @@
 || Panasonic ECG|| EEU-FM1E101|| Cap (electrolitic) || 100uf 25v|| C17|| 1|| $0.32|| http://www.digikey.com/product-detail/en/EEU-FM1E101 || 
 || Sparkfun|| PRT-10877|| Header|| 2x3|| ISP1|| 1|| $1.50|| http://www.sparkfun.com/products/10877 || 
 || Sparkfun|| PRT-00116|| Header straight|| 0.1sp.|| FTDI,LCD,CT1,I/O|| 1|| $1.50|| http://www.sparkfun.com/products/116 || 
-|| Sparkfun|| PRT-08084|| Connector|| 3.5mm 2P|| Rly1,S1/2,SP|| 4|| $0.95|| http://www.sparkfun.com/products/8084 || 
+|| Sparkfun|| PRT-08084|| Connector|| 3.5mm 2P|| Rly1,S1/2,SP|| 3|| $0.95|| http://www.sparkfun.com/products/8084 || 
 || Sparkfun|| PRT-08432|| Connector|| 5.0mm 2P|| DCIN,PILOT|| 2|| $0.95|| http://www.sparkfun.com/products/8432 || 
 || Sparkfun|| PRT-08235|| Connector|| 3.5mm 3P|| JP1|| 1|| $0.95|| http://www.sparkfun.com/products/8235|| 
-|| Circuit board|| Open EVSE V4|| Board|| Double sided|| B1|| 1|| $14.10|| http://oshpark.com || 
-|| || || || || || *Total*|| *$74.11*|| 
+|| Circuit board|| Open EVSE V4|| Board|| Double sided|| B1|| 1|| $14.10|| http://oshpark.com ||
+|| Optional|| AE10011-ND|| IC socket|| 8 pin|| IC2,4,5,6|| 4|| 0.50|| ||
+|| Optional|| ED90054-ND|| IC socket|| 28 pin|| IC1|| 1|| 1.68|| ||
+|| || || || || || *Total*|| *$73.16*|| 
 || *External components* || 
 || Crmagnetics || CR8420-1000-G || CT || 1000|| CT1|| 1|| $10.65|| http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 || 
 || TE Connectivity|| T92S7D22-12|| Relay|| DPST 30amp|| Rly1|| 1|| $13.87|| http://www.digikey.com/product-detail/en/T92S7D22-12 || 
