--- a/wiki/EVSE_by_mwolrich.wiki
+++ b/wiki/EVSE_by_mwolrich.wiki
@@ -37,8 +37,8 @@ If using the L6-30 30A cable/outlet/breaker set the EVSE board to a maximum of 2
 || J-1772 cable, 30 amps (A3435-PEV)  ([http://code.google.com/p/open-evse/wiki/J1772CableSources other options]) || Leviton || $126.00 || 1 || http://store.leviton.com/dp/B00912OT00#.UD18QGjEV68 ||
 || 30A AC Plug L6-30 || Stay Online || $33.00 || 1 || http://www.stayonline.com/detail.aspx?ID=15695 ||
 || AdaFruit RGB LCD Shield kit || AdaFruit || $24.95 || 1 || http://adafruit.com/products/714 ||
-|| Strain Relief 3/4" NPT (Arrow Hart TC1254) || Possible replacement: https://www.alliedelec.com/search/productdetail.aspx?SKU=70075265 || $15 || 1 ||
-|| Strain Relief 1" NPT (Arrow Hart TC1373) || local electrical supply house || $15.00 || 1 ||
+|| Strain Relief 3/4" NPT (Arrow Hart TC1254) ||  || $15 || 1 || Possible replacement: https://www.alliedelec.com/search/productdetail.aspx?SKU=70075265
+|| Strain Relief 1" NPT (Arrow Hart TC1373) || local electrical supply house || $15.00 || 1 || Possible replacement: https://www.alliedelec.com/search/productdetail.aspx?SKU=70075264
 || Ground Bar Kit || Home Depot || $4.17 || 1 || http://www.homedepot.com/h_d1/N-5yc1v/R-100207842/h_d2/ProductDisplay?catalogId=10053&langId=-1&keyword=Ground+Bar+Kit ||
 
 || Totals || + shipping, misc connectors & nuts/bolts || $402.96 ||
