--- a/wiki/OpenEVSEv1partslist.wiki
+++ b/wiki/OpenEVSEv1partslist.wiki
@@ -2,6 +2,8 @@
 
 = Open EVSE v1 part list =
 
+If you'd like to built your own EVSE controller board instead of ordering one, here are the parts that you will need.
+
 || *Basic EVSE* || Part Number || Type || Value ||  || Qty  || Price || URL ||
 || Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu ||  || 1 || 4.98 || http://search.digikey.com/us/en/products/ATMEGA328P-PU/ATMEGA328P-PU-ND/1914589 ||
 || Fairchild Semi || LF353N || Opamp || LF353 ||  || 1 || 0.60 || http://search.digikey.com/us/en/products/LF353N/LF353NFS-ND/458668 ||
