--- a/wiki/OpenEVSEv2partslist.wiki
+++ b/wiki/OpenEVSEv2partslist.wiki
@@ -2,6 +2,8 @@
 
 = Open EVSE V2 parts list =
 
+If you'd like to built your own EVSE controller board instead of ordering one, here are the parts that you will need.
+
 || Basic EVSE || Part Number ||	Type ||	Value || Name || Qty || Price || URL ||
 || Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu || IC1 || 1 || $2.50 || http://www.mouser.com/ProductDetail/Atmel/ATMEGA328P-PU/?qs=K8BHR703ZXguOQv3sKbWcg%3d%3d ||
 || Fairchild Semi || LF353N || Opamp ||	LF353 || IC2 || 1 || $0.60 || http://search.digikey.com/us/en/products/LF353N/LF353NFS-ND/458668 ||
