--- a/wiki/OpenEVSEv4partslist.wiki
+++ b/wiki/OpenEVSEv4partslist.wiki
@@ -2,6 +2,8 @@
 
 = Open EVSE V4 parts list =
 
+If you'd like to built your own EVSE controller board instead of ordering one, here are the parts that you will need.
+
 || *Mfg.* || *Part Number* || *Type* || *Value* || *Name* || *Qty* || *Price* || *URL* || 
 || Atmel || ATMEGA328P-PU || Microprocessor || 328p-pu || IC1|| 1|| $2.50|| http://www.digikey.com/scripts/DkSearch/dksus.dll?vendor=0&keywords=ATMEGA328P-PU-ND || 
 || Analog Devices || ADG419BNZ || HS-Switch || SPDT || IC2|| 1|| $3.15|| http://www.digikey.com/product-detail/en/ADG419BNZ/ADG419BNZ-ND/820067 || 
