--- a/wiki/PCBProduction.wiki
+++ b/wiki/PCBProduction.wiki
@@ -1,6 +1,7 @@
 #summary Sites that offer low volume PCB production
 = Introduction =
-So you downloaded a .brd file or created your own... What now?
+
+If you'd like to built your own EVSE controller board instead of ordering one, here are some PCB board manufacturers.  So you downloaded a .brd file or created your own... What now?
 
 = Details =
 
